adding map, sprites, event listeners

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <title>Happy Birthday Mlamen</title>
   </head>
   <body>
     <canvas></canvas>
