--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
     <title>Happy Birthday Mlamen</title>
   </head>
   <body>
-    <canvas></canvas>
+    <canvas id="canvas"></canvas>
+
+    <script>
+  function resize(){
+    $("#canvas").outerHeight($(window).height()-$("#canvas").offset().top- Math.abs($("#canvas").outerHeight(true) - $("#canvas").outerHeight()));
+  }
+  $(document).ready(function(){
+    resize();
+    $(window).on("resize", function(){
+        resize();
+    });
+  });
+  </script>
+
     <script src="index.js"></script>
   </body>
 </html>
