--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     });
   });
   </script>
-
+    <script src="data/collisions.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
