--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   });
   </script>
     <script src="data/collisions.js"></script>
+    <script src="classes.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
