--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     });
   });
   </script>
+    <script src="data/battlezones.js"></script>
     <script src="data/collisions.js"></script>
     <script src="classes.js"></script>
     <script src="index.js"></script>
