--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Happy Birthday Mlamen</title>
   </head>
   <body>
-    <canvas id="canvas"></canvas>
+
+      <div >
+        <canvas id="canvas"></canvas>
+      </div>
+  <div id="transition"></div>
 
     <script>
   function resize(){
@@ -18,6 +22,7 @@
     });
   });
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="data/battlezones.js"></script>
     <script src="data/collisions.js"></script>
     <script src="classes.js"></script>
