--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
       <div >
         <canvas id="canvas"></canvas>
       </div>
+  <div id="battleMenu">
+    <div id="attacks">
+      <button>Attack1</button>
+      <button>Attack2</button>
+      <button>Attack3</button>
+      <button>Attack4</button>
+    </div>
+    <div id="type">
+      <h1>type</h1>
+    </div>
+  </div>
   <div id="transition"></div>
+
 
     <script>
   function resize(){
