--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
     <title>Happy Birthday Mlamen</title>
   </head>
   <body>
@@ -20,6 +23,22 @@
       <h1>type</h1>
     </div>
   </div>
+  <div id="healthbar">
+    <h1>Draggle</h1> <!--placeholder name, will depend on randomized monster's name-->
+    <div id="wrapper">
+      <div id="bar-empty"></div>
+      <div id="bar-full"></div>
+    </div>
+  </div>
+
+  <div id="healthbar2">
+    <h1>You</h1> <!--placeholder name, will depend on randomized monster's name-->
+    <div id="wrapper">
+      <div id="bar-empty"></div>
+      <div id="bar-full"></div>
+    </div>
+  </div>
+
   <div id="transition"></div>
 
 
