--- a/index.html
+++ b/index.html
@@ -14,28 +14,28 @@
       </div>
   <div id="battleMenu">
     <div id="attacks">
-      <button>Attack1</button>
-      <button>Attack2</button>
-      <button>Attack3</button>
-      <button>Attack4</button>
+      <button>Tackle</button>
+      <button>Fireball</button>
+      <button>Fast Attack</button>
+      <button>Flee</button>
     </div>
     <div id="type">
       <h1>type</h1>
     </div>
   </div>
   <div id="healthbar">
-    <h1>Draggle</h1> <!--placeholder name, will depend on randomized monster's name-->
+    <h1>Wormy</h1> <!--placeholder name, will depend on randomized monster's name-->
     <div id="wrapper">
       <div id="bar-empty"></div>
-      <div id="bar-full"></div>
+      <div id="enemy-full"></div>
     </div>
   </div>
 
   <div id="healthbar2">
-    <h1>You</h1> <!--placeholder name, will depend on randomized monster's name-->
+    <h1>Bootleg Charmander</h1> <!--placeholder name, will depend on randomized monster's name-->
     <div id="wrapper">
       <div id="bar-empty"></div>
-      <div id="bar-full"></div>
+      <div id="player-full"></div>
     </div>
   </div>
 
